changes in POM.xml